--- a/question 4/classics.html
+++ b/question 4/classics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--Your Name
-    Current Date-->
+<!--kaiden salisbury
+    9/9/21-->
 <html lang="en">
 <head>
 	<title>Durango Jewelry Pendant Gem</title>
@@ -23,9 +23,10 @@
 	<div id="main">
 		<h2>Classics</h2>
 		<p>
-		   <!-- add image wirewrap02.jpg width="300" height="350" -->
-		   <!-- add image wirewrap03.jpg width="300" height="350" -->
-	     <!-- add image wirewrap04.jpg width="300" height="350" -->
+		   <a>wirewrap01.jpg</a>
+		   <a>wirewrap02.jpg</a>
+			 <a>wirewrap03.jpg</a>
+			 <a>wirewrap04.jpg</a>
 		</p>
 
 	</div><!--end main-->
