--- a/question 4/classics.html
+++ b/question 4/classics.html
@@ -23,10 +23,10 @@
 	<div id="main">
 		<h2>Classics</h2>
 		<p>
-		   <a>wirewrap01.jpg</a>
-		   <a>wirewrap02.jpg</a>
-			 <a>wirewrap03.jpg</a>
-			 <a>wirewrap04.jpg</a>
+		   <img scr="wirewrap01.jpg" alt="comapany logo" height="300" height="350">
+		   <img scr="wirewrap02.jpg" alt="comapany logo" height="300" height="350">
+			 <img scr="wirewrap03.jpg" alt="comapany logo" height="300" height="350">
+			 <img scr="wirewrap04.jpg" alt="comapany logo" height="300" height="350">
 		</p>
 
 	</div><!--end main-->
