--- a/question 4/contact.html
+++ b/question 4/contact.html
@@ -15,10 +15,10 @@
 		Distinguished wire-wrapped jewelry, pendants, and gems
 	</header>
 	<nav>
-		Classics &nbsp;
-		Specials &nbsp;
-		Gems &nbsp;
-		Contact Me &nbsp;
+		<a href="classics.html">Classics</a> &nbsp;
+		<a href="special.html"Specials</a> &nbsp;
+		<a href="gem.html"Gems</a> &nbsp;
+		<a href="conatactme.html"Contact Me</a> &nbsp;
 		</nav>
 	<div id="main">
 		<h2>Contact Me</h2>
