--- a/question 4/contact.html
+++ b/question 4/contact.html
@@ -27,7 +27,7 @@
 	<footer>
 		Durango Jewelry and Gem Shop, 10101 Main Street, Durango, CO
 		Established 1979
-		Contact us through email
+		<a href="mailto:contactus@gmail.com">contactus@gmail.com</a>
 	</footer>
 </body>
 </html>
